Quick fix of the navigation bottom margin so the social share buttons don't overlap

--- a/html/sites/all/themes/dressitalianresponsive/css/global.css
+++ b/html/sites/all/themes/dressitalianresponsive/css/global.css
@@ -221,7 +221,7 @@ ul.pager {
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#E2E2E2', endColorstr='#ffffff', GradientType=0 ); /* IE6-9 */
 	background: linear-gradient(top, rgba(255,255,255,1) 0%, rgba(200,200,200,1) 2%, rgba(255,255,255,1) 90%); /* W3C */
 	padding-top: 0.8em;
-	margin-bottom: 0.5em;
+	margin-bottom: 3em;
 }
 /* Modify the margin to set tab spacings. */
 #region-menu .navigation #secondary-menu li { }
